--- a/a1/Makefile
+++ b/a1/Makefile
@@ -1,3 +1,9 @@
+#Name : Seth Shelnutt
+#UF ID: 42941969
+#Gator ID: s.shelnutt
+#Discussion section # : 1085
+
+
 # What compiler to use
 CC=g++
 # CFLAGS to pass
